--- a/animals_update/localisation/Cb_war_and_tributaries.csv
+++ b/animals_update/localisation/Cb_war_and_tributaries.csv
@@ -26,6 +26,17 @@ BEAR_TRIBUTE_UNRELIGIOUS;Full obligations;Obligations absolues;;;;;;;;;;;;x
 #cb localisation
 CB_NAME_HEDGE_INVASION;Hostility war;Guerre d'hostilité;;;;;;;;;;;;x
 WAR_NAME_HEDGE_INVASION;Hostility war;Guerre d'hostilité;;;;;;;;;;;;x
+hedgehog_hostility_province_war_desc;Hedgehoggs revolt;Révolte d'hérissons;;;;;;;;;;;;x
 
 #cb tooltip
 HEDGE_WON_HOSTILITY_WAR_TITLE_GAIN;[Root.GetTitledName] gain every allied territory;[Root.GetTitledName] prend toutes les terres alliés;;;;;;;;;;;;x
+
+
+## panda update
+panda_cb_faction_independence_desc;panda's ways to getting independant by force;Une manière propres aux pandas de devenir indépendant;;;;;;;;;;;;x
+
+
+##cat update
+CB_CAT_REVOLT;Cat revolt;Révolte de chats;;;;;;;;;;;;x
+CB_CAT_REVOLT_NAME;Revolt;Révolte;;;;;;;;;;;;x
+cat_basic_revolt_cb_desc;Cat don't want to be chased on their own provinces, so only death will force them do to so.;LEs chats ne veulent pas être chassé de leurs propres provinces. Donc seul la mort pourra les forcer à le faire.;;;;;;;;;;;;x
