--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -217,7 +217,7 @@ cat_society_sabo_power_A_power_desc;As an intrigue cat, you can give a bad omen;
 cat_start_epidemy_power_B;Start an epidemy;Débuter une épidémie;;;;;;;;;;;;x
 cat_start_epidemy_power_B_desc;As an intrigue cat, it is possible to start an apidemy where a target character live;En tant que chat intriguant, il est possible de débuter une épidémie à l'emplacement d'un personnage;;;;;;;;;;;;x
 cat_start_epidemy_power_B_power_desc;As an intrigue cat, it is possible to start an apidemy where a target character live;En tant que chat intriguant, il est possible de débuter une épidémie à l'emplacement d'un personnage;;;;;;;;;;;;x
-cat_revolt_risk_power_C;Sabotage county;Saboter le comter;;;;;;;;;;;;x
+cat_revolt_risk_power_C;Sabotage county;Saboter le comté;;;;;;;;;;;;x
 cat_revolt_risk_power_C_desc;You can force a discord between peasant and their liege;Forcer une discorde entre les paysans d'une province et de leur seigneur liege;;;;;;;;;;;;x
 cat_revolt_risk_power_C_power_desc;You can force a discord between peasant and their liege;Forcer une discorde entre les paysans d'une province et de leur seigneur liege;;;;;;;;;;;;x
 cat_destroy_buildings_power_D;Sabotage a building;Saboter un bâtiment;;;;;;;;;;;;x
