--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -158,3 +158,5 @@ CAT_TT_ORIGIN_FOUND;I should be warry of [Fromfrom.GetFirstName], he must be the
 dog_desc_159;Sometimes, my dog seems weak...;Mon chien semble faible de temps en temps...;;;;;;;;;;;;x
 dog_optA_159;I should look into it!;Je devrais regarder ça de plus près;;;;;;;;;;;;x
 dog_optB_159;It's just my imagination;ça doit être mon imagination;;;;;;;;;;;;x
+dog_desc_160;The dog seems a little sleepy, nothing bad;Le chien semble juste très fatigué;;;;;;;;;;;;x
+dog_opt_160;I must be overthinking things;Je dois devenir parano;;;;;;;;;;;;x
