--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -160,3 +160,5 @@ dog_optA_159;I should look into it!;Je devrais regarder ça de plus près;;;;;;;;;
 dog_optB_159;It's just my imagination;ça doit être mon imagination;;;;;;;;;;;;x
 dog_desc_160;The dog seems a little sleepy, nothing bad;Le chien semble juste très fatigué;;;;;;;;;;;;x
 dog_opt_160;I must be overthinking things;Je dois devenir parano;;;;;;;;;;;;x
+dog_desc_161;the dog was only tired, nothing wrong;Le chien était juste très fatigué, rien de grave;;;;;;;;;;;;x
+dog_opt_161;I was really overthinking...;Je suis vraiment devenu parano...;;;;;;;;;;;;x
