--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -162,3 +162,5 @@ dog_desc_160;The dog seems a little sleepy, nothing bad;Le chien semble juste tr
 dog_opt_160;I must be overthinking things;Je dois devenir parano;;;;;;;;;;;;x
 dog_desc_161;the dog was only tired, nothing wrong;Le chien était juste très fatigué, rien de grave;;;;;;;;;;;;x
 dog_opt_161;I was really overthinking...;Je suis vraiment devenu parano...;;;;;;;;;;;;x
+dog_desc_162;The dog just bite me! He is definetly not well;Le chien vien de me mordre, j'avais raison de m'inquiéter;;;;;;;;;;;;x
+dog_opt_162;I need to get a treatment;J'ai besoin d'un traitement!;;;;;;;;;;;;x
