cul_6 - small fixes

--- a/animals_update/localisation/00_culture_and_bloodline.csv
+++ b/animals_update/localisation/00_culture_and_bloodline.csv
@@ -38,3 +38,7 @@ african_elephant;African elephant;Éléphant d'Afrique;;;;;;;;;;;;x
 cat;Red cat;Chat roux;;;;;;;;;;;;x
 white_cat;White cat;Chat blanc;;;;;;;;;;;;x
 black_cat;Black cat;Chat noir;;;;;;;;;;;;x
+
+#dog update
+dog_culture;hills' dogs;Chien des montagnes;;;;;;;;;;;;x
+steppe_dog;steppe dog;Chien des steppes;;;;;;;;;;;;x
